src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImU32;        
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef int ImGuiCol;             
typedef int ImGuiStyleVar;        
typedef int ImGuiItemFlags;         
CIMGUI_API void ImGui_PushStyleVar(ImGuiStyleVar idx, float val);         
CIMGUI_API void ImGui_PushStyleVarImVec2(ImGuiStyleVar idx, ImVec2 val);  
CIMGUI_API void ImGui_PushStyleVarX(ImGuiStyleVar idx, float val_x);      
CIMGUI_API void ImGui_PushStyleVarY(ImGuiStyleVar idx, float val_y);      
CIMGUI_API void ImGui_PopStyleVar(int count );
CIMGUI_API void ImGui_PushItemFlag(ImGuiItemFlags option, bool enabled);  
CIMGUI_API void ImGui_PopItemFlag(void);
CIMGUI_API void  ImGui_PushItemWidth(float item_width);                       
CIMGUI_API void  ImGui_PopItemWidth(void);
CIMGUI_API void  ImGui_SetNextItemWidth(float item_width);                    
CIMGUI_API float ImGui_CalcItemWidth(void);                                   
CIMGUI_API void  ImGui_PushTextWrapPos(float wrap_local_pos_x );  
CIMGUI_API void  ImGui_PopTextWrapPos(void);
CIMGUI_API ImVec2        ImGui_GetFontTexUvWhitePixel(void);                               
CIMGUI_API ImU32         ImGui_GetColorU32(ImGuiCol idx, float alpha_mul );    
CIMGUI_API ImU32         ImGui_GetColorU32ImVec4(ImVec4 col);                              
CIMGUI_API ImU32         ImGui_GetColorU32ImU32(ImU32 col, float alpha_mul );  
CIMGUI_API const ImVec4* ImGui_GetStyleColorVec4(ImGuiCol idx);                            
CIMGUI_API ImVec2 ImGui_GetCursorScreenPos(void);        
CIMGUI_API void   ImGui_SetCursorScreenPos(ImVec2 pos);  
CIMGUI_API ImVec2 ImGui_GetContentRegionAvail(void);     
CIMGUI_API ImVec2 ImGui_GetCursorPos(void);              
CIMGUI_API float  ImGui_GetCursorPosX(void);             
CIMGUI_API float  ImGui_GetCursorPosY(void);             
CIMGUI_API void   ImGui_SetCursorPos(ImVec2 local_pos);  
CIMGUI_API void   ImGui_SetCursorPosX(float local_x);    
CIMGUI_API void   ImGui_SetCursorPosY(float local_y);    
CIMGUI_API ImVec2 ImGui_GetCursorStartPos(void);         
CIMGUI_API void  ImGui_Separator(void);                        
CIMGUI_API void  ImGui_SameLine(float offset_from_start_x , float spacing ); 
CIMGUI_API void  ImGui_NewLine(void);                          
CIMGUI_API void  ImGui_Spacing(void);                          
CIMGUI_API void  ImGui_Dummy(ImVec2 size);                     
CIMGUI_API void  ImGui_Indent(float indent_w );    
CIMGUI_API void  ImGui_Unindent(float indent_w );  
CIMGUI_API void  ImGui_BeginGroup(void);                       
CIMGUI_API void  ImGui_EndGroup(void);                         
CIMGUI_API void  ImGui_AlignTextToFramePadding(void);          
CIMGUI_API float ImGui_GetTextLineHeight(void);                
CIMGUI_API float ImGui_GetTextLineHeightWithSpacing(void);     
CIMGUI_API float ImGui_GetFrameHeight(void);                   
CIMGUI_API float ImGui_GetFrameHeightWithSpacing(void);        
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef enum
{
    ImGuiItemFlags_None              = 0,     
    ImGuiItemFlags_NoTabStop         = 1<<0,  
    ImGuiItemFlags_NoNav             = 1<<1,  
    ImGuiItemFlags_NoNavDefaultFocus = 1<<2,  
    ImGuiItemFlags_ButtonRepeat      = 1<<3,  
    ImGuiItemFlags_AutoClosePopups   = 1<<4,  
    ImGuiItemFlags_AllowDuplicateId  = 1<<5,  
} ImGuiItemFlags_;
struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;          
    ImVector_ImDrawIdx    IdxBuffer;          
    ImVector_ImDrawVert   VtxBuffer;          
    ImDrawListFlags       Flags;              
    unsigned int          _VtxCurrentIdx;     
    ImDrawListSharedData* _Data;              
    ImDrawVert*           _VtxWritePtr;       
    ImDrawIdx*            _IdxWritePtr;       
    ImVector_ImVec2       _Path;              
    ImDrawCmdHeader       _CmdHeader;         
    ImDrawListSplitter    _Splitter;          
    ImVector_ImVec4       _ClipRectStack;     
    ImVector_ImTextureRef _TextureStack;      
    ImVector_ImU8         _CallbacksDataBuf;  
    float                 _FringeScale;       
    const char*           _OwnerName;         
};