src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// modify a style float variable. always use this if you modify the style after NewFrame()!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushStyleVar(ImGuiStyleVar idx, float val);

    /// <summary>
    /// modify a style ImVec2 variable. "
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushStyleVarImVec2(ImGuiStyleVar idx, System.Numerics.Vector2 val);

    /// <summary>
    /// modify X component of a style ImVec2 variable. "
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushStyleVarX(ImGuiStyleVar idx, float val_x);

    /// <summary>
    /// modify Y component of a style ImVec2 variable. "
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushStyleVarY(ImGuiStyleVar idx, float val_y);

    [DllImport("cimgui")]
    public static extern void ImGui_PopStyleVar(int count);

    /// <summary>
    /// modify specified shared item flag, e.g. PushItemFlag(ImGuiItemFlags_NoTabStop, true)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushItemFlag(ImGuiItemFlags option, byte enabled);

    [DllImport("cimgui")]
    public static extern void ImGui_PopItemFlag();

    /// <summary>
    /// <para>Parameters stacks (current window)</para>
    /// push width of items for common large "item+label" widgets. &gt;0.0f: width in pixels, &lt;0.0f align xx pixels to the right of window (so -FLT_MIN always align width to the right side).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushItemWidth(float item_width);

    [DllImport("cimgui")]
    public static extern void ImGui_PopItemWidth();

    /// <summary>
    /// set width of the _next_ common large "item+label" widget. &gt;0.0f: width in pixels, &lt;0.0f align xx pixels to the right of window (so -FLT_MIN always align width to the right side)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextItemWidth(float item_width);

    /// <summary>
    /// width of item given pushed settings and current cursor position. NOT necessarily the width of last item unlike most 'Item' functions.
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_CalcItemWidth();

    /// <summary>
    /// push word-wrapping position for Text*() commands. &lt; 0.0f: no wrapping; 0.0f: wrap to end of window (or column); &gt; 0.0f: wrap at 'wrap_pos_x' position in window local space
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushTextWrapPos(float wrap_local_pos_x);

    [DllImport("cimgui")]
    public static extern void ImGui_PopTextWrapPos();

    /// <summary>
    /// <para>Style read access</para>
    /// <para>- Use the ShowStyleEditor() function to interactively see/edit the colors.</para>
    /// get UV coordinate for a white pixel, useful to draw custom shapes via the ImDrawList API
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetFontTexUvWhitePixel();

    /// <summary>
    /// retrieve given style color with style alpha applied and optional extra alpha multiplier, packed as a 32-bit value suitable for ImDrawList
    /// </summary>
    [DllImport("cimgui")]
    public static extern uint ImGui_GetColorU32(ImGuiCol idx, float alpha_mul);

    /// <summary>
    /// retrieve given color with style alpha applied, packed as a 32-bit value suitable for ImDrawList
    /// </summary>
    [DllImport("cimgui")]
    public static extern uint ImGui_GetColorU32ImVec4(System.Numerics.Vector4 col);

    /// <summary>
    /// retrieve given color with style alpha applied, packed as a 32-bit value suitable for ImDrawList
    /// </summary>
    [DllImport("cimgui")]
    public static extern uint ImGui_GetColorU32ImU32(uint col, float alpha_mul);

    /// <summary>
    /// retrieve style color as stored in ImGuiStyle structure. use to feed back into PushStyleColor(), otherwise use GetColorU32() to get style color with style alpha baked in.
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector4* ImGui_GetStyleColorVec4(ImGuiCol idx);

    /// <summary>
    /// <para>Layout cursor positioning</para>
    /// <para>- By "cursor" we mean the current output position.</para>
    /// <para>- The typical widget behavior is to output themselves at the current cursor position, then move the cursor one line down.</para>
    /// <para>- You can call SameLine() between widgets to undo the last carriage return and output at the right of the preceding widget.</para>
    /// <para>- YOU CAN DO 99% OF WHAT YOU NEED WITH ONLY GetCursorScreenPos() and GetContentRegionAvail().</para>
    /// <para>- Attention! We currently have inconsistencies between window-local and absolute positions we will aim to fix with future API:</para>
    /// <para>- Absolute coordinate:        GetCursorScreenPos(), SetCursorScreenPos(), all ImDrawList:: functions. -&gt; this is the preferred way forward.</para>
    /// <para>- Window-local coordinates:   SameLine(offset), GetCursorPos(), SetCursorPos(), GetCursorStartPos(), PushTextWrapPos()</para>
    /// <para>- Window-local coordinates:   GetContentRegionMax(), GetWindowContentRegionMin(), GetWindowContentRegionMax() --&gt; all obsoleted. YOU DON'T NEED THEM.</para>
    /// <para>- GetCursorScreenPos() = GetCursorPos() + GetWindowPos(). GetWindowPos() is almost only ever useful to convert from window-local to absolute coordinates. Try not to use it.</para>
    /// cursor position, absolute coordinates. THIS IS YOUR BEST FRIEND (prefer using this rather than GetCursorPos(), also more useful to work with ImDrawList API).
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetCursorScreenPos();

    /// <summary>
    /// cursor position, absolute coordinates. THIS IS YOUR BEST FRIEND.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetCursorScreenPos(System.Numerics.Vector2 pos);

    /// <summary>
    /// available space from current position. THIS IS YOUR BEST FRIEND.
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetContentRegionAvail();

    /// <summary>
    /// [window-local] cursor position in window-local coordinates. This is not your best friend.
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetCursorPos();

    /// <summary>
    /// [window-local] "
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetCursorPosX();

    /// <summary>
    /// [window-local] "
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetCursorPosY();

    /// <summary>
    /// [window-local] "
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetCursorPos(System.Numerics.Vector2 local_pos);

    /// <summary>
    /// [window-local] "
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetCursorPosX(float local_x);

    /// <summary>
    /// [window-local] "
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetCursorPosY(float local_y);

    /// <summary>
    /// [window-local] initial cursor position, in window-local coordinates. Call GetCursorScreenPos() after Begin() to get the absolute coordinates version.
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetCursorStartPos();

    /// <summary>
    /// <para>Other layout functions</para>
    /// separator, generally horizontal. inside a menu bar or in horizontal layout mode, this becomes a vertical separator.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Separator();

    /// <summary>
    /// call between widgets or groups to layout them horizontally. X position given in window coordinates.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SameLine(float offset_from_start_x, float spacing);

    /// <summary>
    /// undo a SameLine() or force a new line when in a horizontal-layout context.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_NewLine();

    /// <summary>
    /// add vertical spacing.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Spacing();

    /// <summary>
    /// add a dummy item of given size. unlike InvisibleButton(), Dummy() won't take the mouse click or be navigable into.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Dummy(System.Numerics.Vector2 size);

    /// <summary>
    /// move content position toward the right, by indent_w, or style.IndentSpacing if indent_w &lt;= 0
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Indent(float indent_w);

    /// <summary>
    /// move content position back to the left, by indent_w, or style.IndentSpacing if indent_w &lt;= 0
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Unindent(float indent_w);

    /// <summary>
    /// lock horizontal starting position
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_BeginGroup();

    /// <summary>
    /// unlock horizontal starting position + capture the whole group bounding box into one "item" (so you can use IsItemHovered() or layout primitives such as SameLine() on whole group, etc.)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndGroup();

    /// <summary>
    /// vertically align upcoming text baseline to FramePadding.y so that it will align properly to regularly framed items (call if you have text on a line before a framed item)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_AlignTextToFramePadding();

    /// <summary>
    /// ~ FontSize
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetTextLineHeight();

    /// <summary>
    /// ~ FontSize + style.ItemSpacing.y (distance in pixels between 2 consecutive lines of text)
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetTextLineHeightWithSpacing();

    /// <summary>
    /// ~ FontSize + style.FramePadding.y * 2
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetFrameHeight();

    /// <summary>
    /// ~ FontSize + style.FramePadding.y * 2 + style.ItemSpacing.y (distance in pixels between 2 consecutive lines of framed widgets)
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetFrameHeightWithSpacing();
